--- a/responsive.html
+++ b/responsive.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fauget Flower Shop</title>
+    <title>Sibra Flower Shop</title>
    <link rel="stylesheet" href="style.css">
     
 </head>
@@ -20,7 +20,6 @@
             <a href="">🛒 Cart ($56)</a>
         </nav>
         </div>
-
 
     </header>
     
