--- a/responsive.html
+++ b/responsive.html
@@ -17,7 +17,7 @@
             <a href="" class="active">Home</a>
             <a href="">Shop</a>
             <a href="">About Us</a>
-            <a href="">🛒 Cart ($56)</a>
+            <a href="" class="active">🛒 Cart ($56)</a>
         </nav>
         </div>
     </header>
@@ -26,7 +26,7 @@
         <div class="hero-container">
             <h1> <span class="black">ALWAYS</span>
                 <span class="orange">FRESH</span><br>
-                <span class="orange">FLOWERS</span>
+                <span class="black">FLOWERS</span>
             </h1>
             <p>At our shop, Always Fresh Flowers means quality you can see and feel. Every bloom is carefully selected from trusted growers to ensure vibrant colors, natural fragrance, and long-lasting beauty. We receive fresh deliveries daily, allowing us to create stunning bouquets that brighten homes and special moments alike. From elegant roses to cheerful seasonal flowers, each arrangement is crafted with care and attention to detail. Our commitment to freshness ensures that every flower tells a story of beauty, joy, and love, making every purchase a memorable experience. </p>
             
