our plant section added with images

--- a/responsive.html
+++ b/responsive.html
@@ -10,7 +10,7 @@
 <body>
     <header class="nav-bar">
         <div class="logo">
-            <small><img src="images/sibralogo.jpg" alt="" sizes=""></small>
+            <small><img src="images/sibralogo-t.png" alt="" sizes=""></small>
          </div>
          <div>
         <nav class="menu-bar">
@@ -37,6 +37,111 @@
 
 
     </section>
+    <section class="plant-container">
+
+        <h1> Our <span>Plants</span>
+        </h1>
+        <p class="description">Discover the charm of nature with our carefully selected plants and floral arrangements. Each piece is crafted to bring freshness, beauty and elegance to your space, making every moment feel special.
+        </p>
+
+        <div class="plant-card-grid">
+            <div class="plant-card">
+                <img src="images/assets/sample-flower-image.png" alt="">
+                <h3>Lily Blossom</h3>
+                <p> <b>$20 usd</b></p>
+                <button>Add to Cart</button>
+            </div>
+         <div class="plant-card-grid">
+            <div class="plant-card">
+                <img src="images/assets/sample-flower-image.png" alt="">
+                <h3>Rose Harmony</h3>
+                <p> <b>$20 usd</b></p>
+                <button>Add to Cart</button>
+            </div>
+
+             <div class="plant-card-grid">
+            <div class="plant-card">
+                <img src="images/assets/sample-flower-image.png" alt="">
+                <h3>Elegant Blossom</h3>
+                <p> <b>$20 usd</b></p>
+                <button>Add to Cart</button>
+            </div>
+             <div class="plant-card-grid">
+            <div class="plant-card">
+                <img src="images/assets/sample-flower-image.png" alt="">
+                <h3>Spring Fresh</h3>
+                <p> <b>$20 usd</b></p>
+                <button>Add to Cart</button>
+            </div>
+             <div class="plant-card-grid">
+            <div class="plant-card">
+                <img src="images/assets/sample-flower-image.png" alt="">
+                <h3>Lily Blossom</h3>
+                <p> <b>$20 usd</b></p>
+                <button>Add to Cart</button>
+            </div>
+             <div class="plant-card-grid">
+            <div class="plant-card">
+                <img src="images/assets/sample-flower-image.png" alt="">
+                <h3>Royal Rose</h3>
+                <p> <b>$20 usd</b></p>
+                <button>Add to Cart</button>
+            </div>
+             <div class="plant-card-grid">
+            <div class="plant-card">
+                <img src="images/assets/sample-flower-image.png" alt="">
+                <h3>Golden Petal</h3>
+                <p> <b>$20 usd</b></p>
+                <button>Add to Cart</button>
+            </div>
+             <div class="plant-card-grid">
+            <div class="plant-card">
+                <img src="images/assets/sample-flower-image.png" alt="">
+                <h3>Garden Grace</h3>
+                <p> <b>$20 usd</b></p>
+                <button>Add to Cart</button>
+            </div>
+             <div class="plant-card-grid">
+            <div class="plant-card">
+                <img src="images/assets/sample-flower-image.png" alt="">
+                <h3>Blooming Delight</h3>
+                <p> <b>$20 usd</b></p>
+                <button>Add to Cart</button>
+            </div>
+             <div class="plant-card-grid">
+            <div class="plant-card">
+                <img src="images/assets/sample-flower-image.png" alt="">
+                <h3>Lily Blossom</h3>
+                <p> <b>$20 usd</b></p>
+                <button>Add to Cart</button>
+            </div>
+             <div class="plant-card-grid">
+            <div class="plant-card">
+                <img src="images/assets/sample-flower-image.png" alt="">
+                <h3>Morning Dew</h3>
+                <p> <b>$20 usd</b></p>
+                <button>Add to Cart</button>
+            </div>
+             <div class="plant-card-grid">
+            <div class="plant-card">
+                <img src="images/assets/sample-flower-image.png" alt="">
+                <h3>Everlasting Charm</h3>
+                <p> <b>$20 usd</b></p>
+                <button>Add to Cart</button>
+            </div>
+
+        </div>
+
+
+    </section>
+
+    
+
+
+
+
+
+
     
 </body>
 </html>
