--- a/responsive.html
+++ b/responsive.html
@@ -138,6 +138,7 @@
     <section class="plant-lover-container">
         <div class="lover-img">
             <img src="images/assets/flower-store.png" alt="Flower Store">
+            <div class="trusted-badge"> <img src="images/assets/trusted-badge.png" alt=""></div>
         </div>
         <div class="lover-content">
             <h2> Flower & Plants <br> Lover </h2>
@@ -147,10 +148,10 @@
                     <li>Delight your senses with the natural beauty and refreshing fragrance of our fresh flower shop. From timeless roses to rare and exotic blooms, we bring you nature at its finest. </li>
                 </ul>
                 <ul>
-                     <li>Explore a wide selection of carefully handpicked flowers and lush plants, perfect for gifting, decorating, or brightening your everyday spaces. </li>
+                     <li>Explore a wide selection of carefully handpicked flowers and lush plants, perfect for gifting, decorating or brightening your everyday spaces. </li>
                      </ul>
                 <ul> 
-                    <li>Our collection is designed to inspire joy and elegance, offering freshness, quality, and charm in every arrangement.</li>
+                    <li>Our collection is designed to inspire joy and elegance, offering freshness, quality and charm in every arrangement.</li>
 
                 </ul>
                 
