Latest Deal section created and h1 & p added

--- a/responsive.html
+++ b/responsive.html
@@ -158,7 +158,12 @@
             </p>
         </div>
     </section>
-    
+<section class="latest-deal">
+    <div class="latest-deal-container"> 
+        <h1> <span>Latest </span> Deal</h1>
+        <p>Experience the beauty and captivating fragrance of our fresh flower shop, featuring everything from timeless roses to rare and exotic blooms. Awaken your senses with the beauty and fragrance of our fresh flower shop, offering everything from classic roses to stunning exotic blooms.</p>
+        </div>
+    </section>
 </body>
 </html>
 
