latest deal grid card added with image and content

--- a/responsive.html
+++ b/responsive.html
@@ -159,9 +159,44 @@
         </div>
     </section>
 <section class="latest-deal">
+
     <div class="latest-deal-container"> 
         <h1> <span>Latest </span> Deal</h1>
         <p>Experience the beauty and captivating fragrance of our fresh flower shop, featuring everything from timeless roses to rare and exotic blooms. Awaken your senses with the beauty and fragrance of our fresh flower shop, offering everything from classic roses to stunning exotic blooms.</p>
+        </div>
+        <div class="deal-grid-container">
+           
+            <div class="left-small-grid">
+
+                <div class="deal-card">
+                    <img src="images/assets/deal-bloom.png" alt="">
+                    <div class="deal-overlay">
+                        <h2>60% Off | Bloom Plant</h2>
+                        <span><u>Shop Now</u></span>
+                    </div>
+                </div>
+
+                <div class="deal-card">
+                    <img src="images/assets/deal-ana.png" alt="">
+                    <div class="deal-overlay">
+                        <h2>30% Off | Ana Plant</h2>
+                        <span><u>Shop Now</u></span>
+                    </div>
+                </div>
+
+
+                <div class="right-big-grid">
+                   <img src="images/assets/deal-zabo.png" alt=""> 
+                   <div class="deal-overlay">
+                        <h2>25% Off | Zabo Plant</h2>
+                        <span><u>Shop Now</u></span>
+                    </div>
+                </div>
+
+
+
+            </div>
+
         </div>
     </section>
 </body>
