--- a/responsive.html
+++ b/responsive.html
@@ -171,31 +171,34 @@
                 <div class="deal-card">
                     <img src="images/assets/deal-bloom.png" alt="">
                     <div class="deal-overlay">
-                        <h2>60% Off | Bloom Plant</h2>
-                        <span><u>Shop Now</u></span>
+                       <p> <h2>60% Off | Bloom Plant</h2>
+                        <span><u>Shop Now</u></span></p>
                     </div>
                 </div>
 
                 <div class="deal-card">
                     <img src="images/assets/deal-ana.png" alt="">
                     <div class="deal-overlay">
-                        <h2>30% Off | Ana Plant</h2>
-                        <span><u>Shop Now</u></span>
+                        <p><h2>30% Off | Ana Plant</h2>
+                        <span><u>Shop Now</u></span></p>
                     </div>
                 </div>
-
+            </div>
 
                 <div class="right-big-grid">
+                    <div class="deal-card">
                    <img src="images/assets/deal-zabo.png" alt=""> 
                    <div class="deal-overlay">
-                        <h2>25% Off | Zabo Plant</h2>
-                        <span><u>Shop Now</u></span>
+                        <p><h2>25% Off | Zabo Plant</h2>
+                        <span><u>Shop Now</u></span></p>
+                    </div>
                     </div>
                 </div>
+                
 
 
 
-            </div>
+            
 
         </div>
     </section>
