newsletter section added content, bg img with css style

--- a/responsive.html
+++ b/responsive.html
@@ -202,6 +202,17 @@
 
         </div>
     </section>
+
+    <section class="newsletter-container" style="background-image: url(images/assets/news-letter-bg.png);">
+        <div class="newsletter-content">
+            <h2>Join the Colorful Bunch</h2>
+            <form action="" class="newsletter-form">
+                <input type="email" placeholder="Write email">
+                <button type="submit">Subscribe</button>
+            </form>
+        </div>
+
+    </section>
 </body>
 </html>
 
