footer section content and logo added

--- a/responsive.html
+++ b/responsive.html
@@ -213,6 +213,38 @@
         </div>
 
     </section>
+
+    <footer class="footer-section">
+        <div class="footer-grid">
+            <img src="images/sibralogo-t.png" alt="" class="sibralogo-footer">
+            <p>Crafting moments of joy through the art of floristry. We are dedicated to providing the freshest stems and most creative designs for your home or special events.</p>
+
+        </div>
+
+        <div>
+            <p>Home</p>
+            <p>About Us</p>
+            <p>Blog</p>
+            <p>FAQ</p>
+            <p>Contact Us</p>
+        </div>
+        
+        <div>
+            <p>Features</p>
+            <p>Pricing</p>
+            <p>Privacy Policy</p>
+            <p>Terms Of Services</p>
+            <p>Help Center</p>
+        </div>
+
+        <div class="social-media">
+            <img src="images/assets/icon-linkedin.png" alt="">
+            <img src="images/assets/icon-twitter.png" alt="">
+            <img src="images/assets/icon-facebook.png" alt="">
+            <img src="images/assets/icon-youtube.png" alt="">
+        </div>    
+
+    </footer>
 </body>
 </html>
 
