footer section css design added

--- a/responsive.html
+++ b/responsive.html
@@ -221,7 +221,7 @@
 
         </div>
 
-        <div>
+        <div class="footer-links">
             <p>Home</p>
             <p>About Us</p>
             <p>Blog</p>
@@ -229,7 +229,7 @@
             <p>Contact Us</p>
         </div>
         
-        <div>
+        <div class="footer-links">
             <p>Features</p>
             <p>Pricing</p>
             <p>Privacy Policy</p>
