media query added for max- 768px in hero section, plant section & plant lover section

--- a/responsive.html
+++ b/responsive.html
@@ -23,20 +23,22 @@
     </header>
 
     <section class="hero-section">
+
         <div class="hero-container">
             <h1> <span class="black">ALWAYS</span>
                 <span class="orange">FRESH</span><br>
-                <span class="black">FLOWERS</span>
+                <span class="orange">FLOWERS</span>
             </h1>
             <p>At our shop, Always Fresh Flowers means quality you can see and feel. Every bloom is carefully selected from trusted growers to ensure vibrant colors, natural fragrance, and long-lasting beauty. We receive fresh deliveries daily, allowing us to create stunning bouquets that brighten homes and special moments alike. From elegant roses to cheerful seasonal flowers, each arrangement is crafted with care and attention to detail. Our commitment to freshness ensures that every flower tells a story of beauty, joy, and love, making every purchase a memorable experience. </p>
             
-            
         </div>
+
         <div class="hero-image "> <img src="images/assets/hero-flower.png" alt="">
         </div>
 
 
     </section>
+
     <section class="plant-container">
 
         <h1> <b>Our <span>Plants</span></b>
